--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
                 <br>
                 <span>&#9994</span>
                 <span>&#9995</span>
-                <span>&#128070</span>
-                <span>&#128071</span>
-                <span>&#128072</span>
-                <span>&#128073<span>
                 <span>&#128076<span>
                 <span>&#128077</span>
                 <span>&#128078</span>
-                <span>&#129304</span>
             </h1>
             <br><br><br><br>
 
@@ -42,7 +37,7 @@
                 <label>Webcam View - </label>
                 <div id="camera"></div>
                 <br><br>
-                <button onclick="Takesnapshot()" id="btn-tksnp">Take Snapshot</button>
+                <button onclick="Take_snapshot()" id="btn-tksnp">Take Snapshot</button>
             </div>
 
             <div class="col-md-4 col-sm-12 col-xs-12">
@@ -59,7 +54,7 @@
                 <label>Snapshot - </label>
                 <div id="result"></div>
                 <br><br>
-                <button onclick="Predictsnapshot()" id="btn-pdtsnp">Predict Snapshot</button>
+                <button  id="btn-pdtsnp">Predict Snapshot</button>
             </div>
 
         </center>
