--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
@@ -22,8 +21,8 @@
                 <span>&#9994</span>
                 <span>&#9995</span>
                 <span>&#128076<span>
-                <span>&#128077</span>
-                <span>&#128078</span>
+                        <span>&#128077</span>
+                        <span>&#128078</span>
             </h1>
             <br><br><br><br>
 
@@ -54,7 +53,7 @@
                 <label>Snapshot - </label>
                 <div id="result"></div>
                 <br><br>
-                <button  id="btn-pdtsnp">Predict Snapshot</button>
+                <button id="btn-pdtsnp" onclick="check()">Predict Snapshot</button>
             </div>
 
         </center>
